--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,10 @@ jobs:
 
       - name: Build project
         run: xcodebuild -project _Room/xcode/PROTOTYPE.xcodeproj -configuration Release build
-      
+
+      - name: Print environment variables
+        run: env
+        
       - name: Create artifact
         uses: actions/upload-artifact@v3
         with:
