--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,9 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    on:
+      workflow_dispatch:
+#    runs-on: macos-latest
 
     steps:
       - uses: actions/checkout@v3
