--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,15 +1,14 @@
 name: Build macOS project
 
 on:
-  push:
-    branches:
-      - main
+      workflow_dispatch:
+#  push:
+#    branches:
+#      - main
 
 jobs:
   build:
-    on:
-      workflow_dispatch:
-#    runs-on: macos-latest
+    runs-on: macos-latest
 
     steps:
       - uses: actions/checkout@v3
