--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: brew install xcodes
+        run: brew install xcodes pkgbuild
 
       - name: Build project
         run: xcodebuild -project _Room/xcode/PROTOTYPE.xcodeproj -configuration Release build
@@ -24,9 +24,15 @@ jobs:
 
       - name: Print GITHUB_WORKSPACE
         run: echo ${{ env.GITHUB_WORKSPACE }}
-        
+
+      - name: Create package
+        run: |
+          app_path=_Room/xcode/build/Release/PROTOTYPE.app
+          package_path=Axle2023.pkg
+          pkgbuild --root $app_path --identifier com.ai.axle --version 1.0.0 $package_path        
+          
       - name: Create artifact
         uses: actions/upload-artifact@v3
         with:
           name: my-artifact
-          path: _Room/xcode/build/Release/PROTOTYPE.app
+          path: Axle2023.pkg
