--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,10 +5,10 @@ on:
 #  push:
 #    branches:
 #      - main
-
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: self-hosted
+#    runs-on: macos-latest
 
     steps:
       - uses: actions/checkout@v3
