added more dependencies

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Build macOS project
+name: Axle Edit OSX Build
 
 on:
       workflow_dispatch:
@@ -11,9 +11,10 @@ jobs:
 #    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
-
+      - uses: actions/setup-homebrew@v2
       - name: Install dependencies
-        run: brew install xcodes
+        run: brew install xcode composer npm node bower
+#        run: brew install xcodes
 
       - name: Build project
         run: xcodebuild -project _Room/xcode/PROTOTYPE.xcodeproj -configuration Release build
