--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,8 @@ on:
 #      - main
 jobs:
   build:
-    runs-on: self-hosted
-#    runs-on: macos-latest
+    #runs-on: self-hosted
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-homebrew@v2
