--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
 #      - uses: actions/setup-homebrew@v2
       - name: Install dependencies
-        run: brew install xcode composer npm node bower
+        run: brew install xcodes composer npm node bower
 #        run: brew install xcodes
 
       - name: Build project
