--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Print environment variables
         run: env
 
+      - name: Print current limit
+        run: ulimit -n
+
       - name: Print GITHUB_WORKSPACE
         run: echo ${{ env.GITHUB_WORKSPACE }}
 
