--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
           app_path=_Room/xcode/build/Release/PROTOTYPE.app
           package_path=Axle2023.pkg
           pkgbuild --root $app_path --identifier com.ai.axle --version 1.0.0 $package_path    
-          installer -pkg $package_path -target / 
+          sudo installer -pkg $package_path -target / 
           
       - name: Create artifact
         uses: actions/upload-artifact@v3
